extras/miq-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: miq-app
spec:
  port:
    targetPort: miq-app-ssl
  tls:
    termination: passthrough
  to:
    kind: Service
    name: miq-app
